--- a/src/public/prueba.css
+++ b/src/public/prueba.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
 }
-.container{
+.container.docs{
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
@@ -14,4 +14,57 @@
     font-weight: bold;
     color: white;
 }
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+form input[type='text']{
+    border-radius: 5px;
+    padding: 5px;
+    border: 1px solid rgba(0, 0, 0, .3);
+    outline: 0;
+    width: 100%;
 
+}
+form select{
+    border-radius: 5px;
+    padding: 5px;
+    border: 1px solid rgba(0, 0, 0, .3);
+    outline: 0;
+    width: 100%;
+
+}
+form input[type='submit']{
+    padding: 5px 20px;
+    width: 10%;
+    margin-top: 20px;
+    border: none;
+    box-shadow: inset 0 -.2em 5px rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    transition: .3s;
+    outline: 0;
+    background: #3B3D52;
+    color: white;
+    font-weight: bold;
+    will-change: transform;
+}
+form input[type='submit']:active{
+    transform: scale(.9);
+}
+form input[type='radio']{
+    width: 50px;
+    outline: 0;
+}
+form .containerlabel{
+    width: 30%;
+}
+form .containerlabel2{
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+form .containerlabel label{
+    font-weight: bold;
+}
