--- a/src/public/prueba.css
+++ b/src/public/prueba.css
@@ -68,3 +68,78 @@ form .containerlabel2{
 form .containerlabel label{
     font-weight: bold;
 }
+
+.overlay{
+    width: 100vw;
+    background: rgba(0,0,0,0.5);
+    height: 100vh;
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    transition: 1.1s ease-in;
+    opacity: 0;
+    visibility: hidden;
+
+}
+.overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+.modalText{
+    position: fixed;
+    width: 65vw;
+    height: 80vh;
+    z-index: 10;
+    background: white;
+    top: 10%;
+    left: 18%;
+    border-radius: 10px;
+    transform: translateY(-3000px);
+    /*animation: animationIn .8s forwards; */
+    overflow: scroll;
+}
+
+.container .card .card-header:hover{
+    cursor: pointer !important;
+}
+
+@keyframes animationIn {
+    0% {
+        transform: translateY(-3000px);
+    }
+
+    60% {
+        transform: translateY(25px);
+    }
+
+    75% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(5px);
+    }
+
+
+}
+
+@keyframes animationOut {
+    0% {
+        transform: translateY(5px);
+    }
+
+    60% {
+        transform: translateY(-10px);
+    }
+
+    75% {
+        transform: translateY(25px);
+    }
+
+    100% {
+        transform: translateY(-3000px);
+    }
+
+}
