--- a/src/public/prueba.css
+++ b/src/public/prueba.css
@@ -9,6 +9,12 @@
 .container .card{
     margin: 20px 5px;
 }
+.container .card .card-body{
+    background: #fff url('../public/img/Escudo_de_Bolivia2.png') no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 50%;
+}
 .container .card .card-header{
     background: #3B3D52;
     font-weight: bold;
@@ -67,4 +73,36 @@ form .containerlabel2{
 }
 form .containerlabel label{
     font-weight: bold;
+}
+
+.overlay{
+    width: 100vw;
+    background: rgba(0,0,0,0.5);
+    height: 100vh;
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    transition: 1.1s ease-in;
+    opacity: 0;
+    visibility: hidden;
+
+}
+.overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+.modalText{
+    position: fixed;
+    width: 65vw;
+    height: 50vh;
+    z-index: 10;
+    background: wheat;
+    top: 10%;
+    left: 18%;
+    border-radius: 10px;
+    /* transform: translateY(-3000px) */
+    /* animation: animationIn .8s forwards; */
+    /* overflow: scroll; */
 }
